test coverage reaport