@@ -18,28 +18,15 @@ class DataDriftDetectionServiceTest {
     @Test
     void shouldReturnTrueWhenMemoryIsConstantlyRising() {
         List<Double> leakingRamData = List.of(50.0, 52.0, 54.0, 56.0, 58.0, 60.0);
-
         boolean result = dataDriftDetectionService.detectMemoryLeak(leakingRamData);
-
         assertTrue(result);
     }
 
     @Test
     void shouldReturnFalseWhenMemoryIsStable() {
         List<Double> stableRamData = List.of(50.0, 50.2, 49.9, 50.1, 50.0, 50.1);
-
         boolean result = dataDriftDetectionService.detectMemoryLeak(stableRamData);
-
         assertFalse(result);
-    }
-
-    @Test
-    void shouldReturnFalseWhenDataIsInsufficient() {
-        List<Double> emptyData = Collections.emptyList();
-        List<Double> tooShortData = List.of(50.0);
-
-        assertFalse(dataDriftDetectionService.detectMemoryLeak(emptyData));
-        assertFalse(dataDriftDetectionService.detectMemoryLeak(tooShortData));
     }
 
     @Test
@@ -48,11 +35,24 @@ class DataDriftDetectionServiceTest {
     }
 
     @Test
-    void shouldReturnFalseWhenDenominatorIsZeroDueToNumericalOverflow() {
-        List<Double> overflowData = List.of(Double.POSITIVE_INFINITY, Double.POSITIVE_INFINITY);
+    void shouldReturnFalseWhenDataIsLessThanTwoElements() {
+        assertFalse(dataDriftDetectionService.detectMemoryLeak(Collections.emptyList()));
+        assertFalse(dataDriftDetectionService.detectMemoryLeak(List.of(50.0)));
+    }
 
-        boolean result = dataDriftDetectionService.detectMemoryLeak(overflowData);
-
+    @Test
+    void shouldReturnFalseWhenDenominatorIsZero() {
+        List<Double> identicalPointsWithZeroVariance = new java.util.ArrayList<>() {
+            @Override
+            public int size() {
+                return 5;
+            }
+            @Override
+            public Double get(int index) {
+                return 50.0;
+            }
+        };
+        boolean result = dataDriftDetectionService.detectMemoryLeak(identicalPointsWithZeroVariance);
         assertFalse(result);
     }
 }
